Ultima sistemazione dello stile per il form del profilo

--- a/progettoiseo/accounts/templates/profilo.html
+++ b/progettoiseo/accounts/templates/profilo.html
@@ -185,14 +185,14 @@
                             <i class="fas fa-key"></i> Cambia Password
                         </a>
                         <div class="d-flex gap-2 flex-wrap">
-                            <button type="button" id="enableEditBtn" class="btn btn-info">
+                            <button type="submit" id="saveBtn" class="btn btn-success" style="display:none;" disabled>
+                                <i class="fas fa-save"></i> Salva Modifiche
+                            </button>
+                            <button type="button" id="enableEditBtn" class="btn btn-primary">
                                 <i class="fas fa-edit"></i> Modifica Profilo
                             </button>
                             <button type="button" id="cancelAllBtn" class="btn btn-warning" style="display:none;">
                                 <i class="fas fa-times"></i> Interrompi Tutte le Modifiche
-                            </button>
-                            <button type="submit" id="saveBtn" class="btn btn-success" disabled>
-                                <i class="fas fa-save"></i> Salva Modifiche
                             </button>
                             <a href="{% url 'home' %}" class="btn btn-secondary">
                                 <i class="fas fa-arrow-left"></i> Torna alla Home
@@ -405,6 +405,7 @@ document.addEventListener('DOMContentLoaded', function() {
         }
 
         hasChanges = anyChanges;
+        saveBtn.style.display = anyChanges ? 'inline-block' : 'none';
         saveBtn.disabled = !anyChanges;
     }
 
